--- a/styles.css
+++ b/styles.css
@@ -151,3 +151,61 @@ h2, .h2 {
     color: #b34838 !important;
 
 }
+
+.figure > p > a > .img-fluid {
+  max-width: 100%;
+  width: auto;
+  height: 10em;
+}
+
+/*lightbox*/
+
+.glightbox-mobile .glightbox-container .gslide-description{
+  height:auto!important;
+  width:100%;
+  position:absolute;
+  bottom:0;
+  padding:19px 11px;
+  max-width:100vw!important;
+  -webkit-box-ordinal-group:3!important;
+  -ms-flex-order:2!important;
+  order:2!important;
+  max-height:78vh;
+  overflow:auto!important;
+  background:-webkit-gradient(linear,left top,left bottom,from(rgba(0,0,0,0)),to(rgba(0,0,0,.75)));
+  background:linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.75) 100%);
+  -webkit-transition:opacity .3s linear;
+  transition:opacity .3s linear;
+  padding-bottom:50px
+}
+
+.glightbox-mobile .glightbox-container .gslide-title{
+  color:#222;
+  font-size:1em
+}
+
+.glightbox-mobile .glightbox-container .gslide-desc{
+  color:#222
+}
+
+.glightbox-mobile .glightbox-container .gslide-desc a{
+  color:#222;font-weight:700
+}
+
+.glightbox-mobile .glightbox-container .gslide-desc *{
+  color:inherit
+}
+
+.glightbox-mobile .glightbox-container .gslide-desc .desc-more{
+  color:#222;
+  opacity:.4
+}
+
+.glightbox-container .ginner-container.desc-bottom {
+  background-color: none white !important;
+}
+
+.glightbox-container .ginner-container {
+  background-color: none white !important;
+  height: auto !important;
+}
